# covconfig

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE  README.md  access.cpp  access.h  array.cpp  array.h  config.cpp  config.h  covconfig.cmake  entry.cpp  entry.h  entry_impl.h  export.h  file.cpp  file.h  manager.cpp  manager.h  manager_impl.h  observer.h  section.cpp  section.h  value.cpp  value.h
cmake/: FindFilesystem.cmake
detail/: base.cpp  base.h  entry.cpp  entry.h  export.h  flags.h  logger.cpp  logger.h  manager.cpp  manager.h  manager_impl.h  observer.cpp  observer.h  output.cpp  output.h  tomlaccess.cpp  tomlaccess.h
